--- a/public/index.html
+++ b/public/index.html
@@ -44,39 +44,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-<!-- load OpusMediaRecorder.umd.js. OpusMediaRecorder will be loaded. -->
-<script src="https://cdn.jsdelivr.net/npm/opus-media-recorder@latest/OpusMediaRecorder.umd.js"></script>
-<!-- load encoderWorker.umd.js. This should be after OpusMediaRecorder. -->
-<!-- This script tag will create OpusMediaRecorder.encoderWorker. -->
-<script src="https://cdn.jsdelivr.net/npm/opus-media-recorder@latest/encoderWorker.umd.js"></script>
- 
-<script>
-// ...
-// If you already load encoderWorker.js using <script> tag,
-// you don't need to define encoderWorkerFactory.
-// const workerOptions = {
-//   OggOpusEncoderWasmPath: 'https://cdn.jsdelivr.net/npm/opus-media-recorder@latest/OggOpusEncoder.wasm',
-//   WebMOpusEncoderWasmPath: 'https://cdn.jsdelivr.net/npm/opus-media-recorder@latest/WebMOpusEncoder.wasm'
-// };
- 
-// // Check if MediaRecorder available.
-// if (!window.MediaRecorder) {
-//   window.MediaRecorder = OpusMediaRecorder;
-// }
-// // Check if a target format (e.g. audio/ogg) is supported.
-// else if (!window.MediaRecorder.isTypeSupported('audio/wav')) {
-//   window.MediaRecorder = OpusMediaRecorder;
-// }
-// ...
-</script>
 <!-- BOOTSTRAP JS CDN -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
+<!-- OPUS MEDIA RECORDER CDN -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/OpusMediaRecorder.umd.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/encoderWorker.umd.js"></script>
 
+<!-- FONT AWESOME CDN -->
+<script src="https://kit.fontawesome.com/8f846f10c0.js" crossorigin="anonymous"></script>
 
 <!-- CONNECT AUDIO RECORD PROGRAM -->
 <!-- <script src="%PUBLIC_URL%/assets/js/audiotool.js"></script> -->
