--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,11 @@
 <!-- FONT AWESOME CDN -->
 <script src="https://kit.fontawesome.com/8f846f10c0.js" crossorigin="anonymous"></script>
 
+<!-- CLOUDINARY-CORE CDN -->
+<script src="node_modules/lodash/lodash.js"                   type="text/javascript"></script>
+<script src="node_modules/cloudinary-core/cloudinary-core.js" type="text/javascript"></script>
+
+
 <!-- CONNECT AUDIO RECORD PROGRAM -->
 <!-- <script src="%PUBLIC_URL%/assets/js/audiotool.js"></script> -->
 </body>
