updated styling / view toggle buttons

--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-<footer id="footer" class="text-dark">
+<!-- <footer id="footer" class="text-dark">
   <p>
     &copy; &lt; ZGS &gt;  2020
   </p>
-</footer>
+</footer> -->
 <!-- BOOTSTRAP JS CDN -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
