--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,10 @@
     &copy; &lt; ZGS &gt;  2020
   </p>
 </footer> -->
+
+ <!-- WAVE JS CDN -->
+ <script src="https://cdn.jsdelivr.net/gh/foobar404/wave.js/dist/bundle.iife.js"></script>
+
   <!-- BOOTSTRAP JS CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -90,9 +94,11 @@
   <!-- <script src="node_modules/lodash/lodash.js"                   type="text/javascript"></script>
 <script src="node_modules/cloudinary-core/cloudinary-core.js" type="text/javascript"></script> -->
 
-
   <!-- CONNECT AUDIO RECORD PROGRAM -->
-  <!-- <script src="%PUBLIC_URL%/assets/js/audiotool.js"></script> -->
+  <script src="%PUBLIC_URL%/assets/js/audiotool.js"></script>
+
+ 
+
 </body>
 
 </html>
