--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <!-- <link rel="manifest" href="/manifest.json"> -->
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#000">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#000">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -67,8 +67,8 @@
   </p>
 </footer> -->
 
- <!-- WAVE JS CDN -->
- <script src="https://cdn.jsdelivr.net/gh/foobar404/wave.js/dist/bundle.iife.js"></script>
+  <!-- WAVE JS CDN -->
+  <!-- <script src="https://cdn.jsdelivr.net/gh/foobar404/wave.js/dist/bundle.iife.js"></script> -->
 
   <!-- BOOTSTRAP JS CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -82,22 +82,16 @@
     crossorigin="anonymous"></script>
 
   <!-- OPUS MEDIA RECORDER CDN -->
-  <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/OpusMediaRecorder.umd.js"></script>
-  <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/encoderWorker.umd.js"></script>
-
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/OpusMediaRecorder.umd.js"></script>
   <!-- FONT AWESOME CDN -->
   <script src="https://kit.fontawesome.com/8f846f10c0.js" crossorigin="anonymous"></script>
-
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/opus-media-recorder@0.8.0/encoderWorker.umd.js"></script>
   <!-- CLOUDINARY-CORE CDN -->
   <!-- <script src="node_modules/lodash/lodash.js"                   type="text/javascript"></script>
 <script src="node_modules/cloudinary-core/cloudinary-core.js" type="text/javascript"></script> -->
 
   <!-- CONNECT AUDIO RECORD PROGRAM -->
   <script src="%PUBLIC_URL%/assets/js/audiotool.js"></script>
-
- 
 
 </body>
 
